--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
-    <title>htmlcss-struttura-wp</title>
+    <title>htmlcss-wp</title>
   </head>
   <body>
+    <!-- container principale -->
     <div class="container">
-      <!-- container principale -->
 
       <!-- header -->
       <header>
@@ -31,12 +31,12 @@
           <li><a href="#">blog</a></li>
           <li><a href="#">contact</a></li>
         </ul>
-
       </nav>
       <!-- /navigation menu -->
 
       <!-- sezione principale -->
       <main>
+
         <!-- colonna sinistra sidebar -->
         <aside class="float-left box">
           <div class="titol_aside">
@@ -49,15 +49,14 @@
               <li><a href="#">The Ultimate Guide To Optimize Your WordPress Theme For Gutenberg</a></li>
               <li><a href="#">A Better Wordpress Page Builder - Organic Builder Widgets Pro</a></li>
             </ul>
-
         </aside>
         <!-- /colonna sinistra sidebar -->
 
         <!-- colonna centrale main -->
-        <section class="central float-left box">
+        <div class="central float-left box">
           <h2>THREE COLUMN</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        </section>
+        </div>
         <!-- /colonna centrale main -->
 
         <!-- colonna sinistra -->
@@ -82,7 +81,7 @@
 
       <!-- footer -->
       <footer class="float-left box">
-        <h4>Pagina realizzata da Antonio Lo Votrico</h4>
+        <h3>Pagina realizzata da Antonio Lo Votrico</h3>
         <a href="#"><i class="fab fa-facebook-square"></i></a>
         <a href="#"><i class="fab fa-instagram"></i></a>
         <a href="#"><i class="fab fa-github"></i></a>
